I changed some elements in the interface.
No break in binary compatibily (no crash), but some details.


0.7.60 --> 0.7.61
-----------------
- MPEG-TS: Menu stream, KLVA_PID and SCTE35_PID removed and formats are in "Format" field

0.7.58 --> 0.7.59
-----------------
- colour_primaries, transfer_characteristics, matrix_coefficients: canonicalization of results

0.7.53 --> 0.7.54
-----------------
- CEA-608: ID naming scheme has changed

0.7.52 --> 0.7.53
-----------------
- MPEG-4: Material_* fields (in case of source duration different than track duration) --> Source_*

0.7.44 --> 0.7.45
-----------------
- FLV and RIFF: Changing Sorenson H.263 to Sorenson Spark because this stream format is too much incompatible with H.263

0.7.36 --> 0.7.37
-----------------
- JPEG 2000: Format_Profile=Reversible --> Compression_Mode=Lossless and Format_Profile=Irreversible --> Compression_Mode=Lossy

0.7.35 --> 0.7.36
-----------------
- M-JPEG format is renamed JPEG, M-JPEG 2000 format is renamed JPEG 2000 (difference between video and image is made by the stream kind)

0.7.32 --> 0.7.33
-----------------
- Colorimetry is deprecated, replaced by ColorSpace
- Resolution is deprecated, replaced by BitDepth

0.7.30 --> 0.7.31
-----------------
- Format: "Digital Video" renamed to "DV"

0.7.28 --> 0.7.29
-----------------
- Channel position: more coherency between the different formats (Front, Surround, back)

0.7.18 --> 0.7.19
-----------------
- XML output: track names are changed, for a better usability by XML parsers (<track type="x" streamid="x">)

0.7.12 --> 0.7.13
-----------------
- Chapters has now language type per item, another string format, and moved to the menu part
  Old string format was "Chapter number             : Time - chapter string"
  New string format is  "Time                       : chapter string / Optional info / Optional info" (optional info is separated by " / ")