@@ -5,6 +5,7 @@ No break in binary compatibily (no crash), but some details.
 0.7.60 --> 0.7.61
 -----------------
 - MPEG-TS: Menu stream, KLVA_PID and SCTE35_PID removed and formats are in "Format" field
+- DTS: moved DTS endianess and word size
 
 0.7.58 --> 0.7.59
 -----------------
